@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-05-10
+ * Added a --force option to wing class --add so that you don't accidentally overwrite your classes.
+
 2016-05-05
  * Upgraded to latest angular and angular-ui.
 
